# iterative-gaussianization

./: .gitignore  README.md  pyproject.toml  requirements.txt
experiments/: BayesianLogistic.ipynb  Gaussian_convergence.ipynb  field_system.ipynb  gaussian_target.ipynb  posteriordb_simulation.py  run_mcmc.py  run_sparse_logistic.py  targets.py  test.py  test_logistic.ipynb
experiments/glmm/: run_glmm.py
experiments/irt2pl/: run_irt2pl.py
experiments/logistic/: BayesianLogistic.ipynb  bayesian_logistic_reference_samples_unc.csv  run_logistic.py
experiments/posteriordb_experiment/: M0_mcmc_samples_unc.csv  arK_mcmc_samples_unc.csv  hmm_mcmc_samples_unc.csv  irt_2pl_mcmc_samples_unc.csv  run_posteriordb.py  sesame_mcmc_samples_unc.csv  wells_mcmc_samples_unc.csv
experiments/results/: M0_mcmc_moments.pkl  arK_mcmc_moments.pkl  arma_laplace_initialization.csv  arma_mcmc_moments.pkl  eight_schools_laplace_initialization.csv  garch_laplace_initialization.csv  garch_mcmc_moments.pkl  german_mcmc_moments.pkl  glmm_poisson_mcmc_moments.pkl  gp_regr_initialization.csv  gp_regr_laplace_initialization.csv  gp_regr_mcmc_moments.pkl  hmm_mcmc_moments.pkl  irt_2pl_mcmc_moments.pkl  kidscore_interaction_mcmc_moments.pkl  mesquite_initialization.csv  mesquite_mcmc_moments.pkl  nes_logit_initialization.csv  nes_logit_laplace_initialization.csv  nes_logit_mcmc_moments.pkl  normal_mixture_initialization.csv  normal_mixture_mcmc_moments.pkl  pilots_mcmc_moments.pkl  radon_initialization.csv  radon_mcmc_moments.pkl  (+2 more)
stan/: GLMM_n_500.json  german.json  mesquite.json  nes_logit.json
(+34 files in other folders)
